Steps how to reproduce with Version: 5.4.2.2 Build-ID: 22b09f6418e8c2d508a9eaf86b2399209b0990f4 CPU-Threads: 4; Betriebssystem:Windows 6.1; UI-Render: Standard; Gebietsschema: de-DE (de_DE); Calc: group: 1. Open existing complex Spreadsheet document 2. Apply any auto filter 3. Click a cell in the middle of an area of joint rows 4. Try to click 'Insert Row' or 'Insert Column' icon in Standard Toolbar Expected: works, Pulldown menu opens Actual: Nothing happens until Document has been saved (by click on 'Save' icon
Additional information: ------------------------- a) No obvious DUP found with <https://bugs.documentfoundation.org/buglist.cgi?cmdtype=dorem&remaction=run&namedcmd=DUPs113980&sharer_id=19321> b) also see "Bug 57351 - Calc: "Insert columns" is not available in the context menu if an autofilter to hide rows is applied"
c) It seems the issue only appears if Autofilter has been applied as Standard Filter
Currently only reproduced with WIN
Cannot reproduce with and insert cell or column is not a problem Version: 5.4.4.0.0+ Build ID: 19a50ab615497bec8effbadbfc5d8a5d8b633520 CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: kde4; Locale: nl-BE (en_US.UTF-8); Calc: group Version: 6.0.0.0.alpha1+ Build ID: f1a55c4bfc6afcd9fd316e055e626097e0666ea8 CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: kde4; Locale: nl-BE (en_US.UTF-8); Calc: group threaded
Still REPRODUCIBLE with Version: 6.0.0.0.alpha1+ (x64) Build ID: a5af0fd9f27af42cf2e8571f659cdad6e606215b CPU threads: 4; OS: Windows 6.1; UI render: default; TinderBox: Win-x86_64@42, Branch:master, Time: 2017-11-07_00:30:02 Locale: de-DE (de_DE); Calc: CL But some minor aspects changed. In the evening, I will do some more tests together with 57351, because the problem only is reproducible under some additional particular conditions not completely mentioned in original report.
Created attachment 138048 [details] Sampe Document The document contains a test area and an additional table with STR and test results. I steps 12,13 you see a difference to Bug 57351 We should try to find out with which Version this one started.
(In reply to Rainer Bielefeld Retired from comment #6) > Created attachment 138048 [details] > Sampe Document Reproduced. In 5.0.2.2 and 4.4.7.2, step 12 works as expected. Step 13 and 14 are the same as 5.4 and newer. So let's call for a bibisect for the step 12. Version: 6.1.0.0.alpha0+ (x64) Build ID: 42dafb5c7bd218f4d368fbd1113fa4a0fcd7f0cb CPU threads: 4; OS: Windows 10.0; UI render: default; TinderBox: Win-x86_64@42, Branch:master, Time: 2017-11-29_23:13:56 Locale: fi-FI (fi_FI); Calc: group threaded
Assuming that I correctly understand this report, this seems to fix step 12: https://gerrit.libreoffice.org/45614/ step 14 is an exact duplicate of Bug 57351 IMHO.
Maxim Monastirsky committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=4b65a67caacee1ef0b31219d55bfe0cc6032c9f3 tdf#113980 Refresh row/column buttons state after selection change It will be available in 6.1.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
I confirm the fix. Thanks, Maxim. Arch Linux 64-bit Version: 6.1.0.0.alpha0+ Build ID: d4a54ec92674773bc0f9358a3d9090915a3c8fb0 CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: kde4; Locale: fi-FI (fi_FI.UTF-8); Calc: group threaded Built on December 9th 2017
Maxim Monastirsky committed a patch related to this issue. It has been pushed to "libreoffice-6-0": http://cgit.freedesktop.org/libreoffice/core/commit/?id=081a544b92ab7adbdfe29d56d91019556ffc07c9&h=libreoffice-6-0 tdf#113980 Refresh row/column buttons state after selection change It will be available in 6.0.0.2. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Hi Every Body, this bug is still present, you're able to insert a new column or row if you're in the column that has apply the filter, if your on another column you can't insert a new column. To reproduce that, you still can open the file, then apply the filter in any column, then move to another column and try to insert a column.
(In reply to Emersson Augusto Suarez Ortiz from comment #12) > Hi Every Body, this bug is still present, you're able to insert a new column > or row if you're in the column that has apply the filter, if your on another > column you can't insert a new column. > > To reproduce that, you still can open the file, then apply the filter in any > column, then move to another column and try to insert a column. This is an old report. Please open a new one.