tdf#113980 Refresh row/column buttons state after selection change

Change-Id: I21684ffe83d7b924e1d83c853ed4846e0db53c3b
Reviewed-on: https://gerrit.libreoffice.org/45614
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Maxim Monastirsky <momonasmon@gmail.com>
(cherry picked from commit 4b65a67caacee1ef0b31219d55bfe0cc6032c9f3)
Reviewed-on: https://gerrit.libreoffice.org/47026
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>