sc/source/ui/view/tabview3.cxx
@@ -535,6 +535,8 @@ void ScTabView::SelectionChanged()
     rBindings.Invalidate( FID_INS_CELL );
     rBindings.Invalidate( FID_INS_CELLSDOWN );
     rBindings.Invalidate( FID_INS_CELLSRIGHT );
+    rBindings.Invalidate( SID_ROW_OPERATIONS );
+    rBindings.Invalidate( SID_COLUMN_OPERATIONS );
 
     rBindings.Invalidate( FID_CHG_COMMENT );
 
